syntax = "proto3";
package api;


message Empty {}

service Api {
  rpc Status(Empty) returns (StatusReply);
  rpc TaskSubmit(Task) returns (TaskAck);
  rpc Ping(Empty) returns (Empty);
}

message StatusReply {
  string message = 1;
}

message Task {
  string id = 1;
}

message TaskAck {
  string id = 1;
}
